<resources>
    <string name="app_name">Swoosh</string>
    <string name="all_in_text">GO ALL IN</string>
    <string name="all_out_text">ON GOING ALL OUT</string>
    <string name="find_a_team">Find a team in your city and dominate the league</string>
    <string name="get_started_btn_text">GET STARTED</string>
    <string name="desired_league">Desired League</string>
    <string name="men">Men</string>
    <string name="women">WOMEN</string>
    <string name="coed">CO-ED</string>
    <string name="next">NEXT</string>
    <string name="swoosh_logo_content">swooshLogo</string>
    <string name="background_image">background image</string>
    <string name="i_m_a">I\'m a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="find_game">Find game</string>
    <string name="looking_for_league">Looking for a %s %s league near you</string>
</resources>
