<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beginnerballerbg"
    tools:context="com.example.lkord.swoosh.SkillActivity">

    <ImageView
        android:id="@+id/swooshLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/swoosh_logo_content"
        android:scaleType="fitCenter"
        android:src="@drawable/swooshlogo"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skillLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/i_m_a"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swooshLogo" />

    <ToggleButton
        android:id="@+id/beginner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/swoosh_toggle"
        android:textColor="@color/colorAccent"
        android:textOff="@string/beginner"
        android:textOn="@string/beginner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skillLevel" />

    <ToggleButton
        android:id="@+id/baller"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/swoosh_toggle"
        android:textColor="@color/colorAccent"
        android:textOff="@string/baller"
        android:textOn="@string/baller"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/beginner"
        app:layout_constraintTop_toBottomOf="@id/skillLevel" />

    <Button
        android:id="@+id/findGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/swoosh_button"
        android:text="@string/find_game"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
